# ghost-sense

./: .gitignore  README.md  pyproject.toml  schema.sql
.github/workflows/: ci.yml
ghost_sense/: bus.py  config.py  main.py  models.py
ghost_sense/accumulator/: decay.py  state_store.py  trend.py
ghost_sense/conditioner/: preamble.py
ghost_sense/conditioner/adapters/: boo2.py  claude.py
ghost_sense/extractor/: absence.py  base.py  cadence.py  nutrition.py  register.py  sleep.py  stress.py
ghost_sense/harvester/: prompts.py
ghost_sense/routing/: cin_feedback.py
tests/: test_absence.py  test_accumulator.py  test_cadence.py  test_decay.py  test_extractors.py  test_harvester.py  test_linear_regression.py  test_nutrition.py  test_preamble.py  test_routing.py  test_sleep.py  test_stress.py  test_trend.py
tests/fixtures/: sample_messages.json
