[project]
name = "ghost-sense"
version = "0.1.0"
description = "Ambient user-state inference engine"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
# No third-party runtime dependencies — standard library only.
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]
dev = ["pytest>=7", "ruff"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ghost_sense*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Line length is not enforced: existing code predates this config and
# reformatting it would add churn without fixing real problems.
ignore = ["E501"]
